--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "@tanstack/react-query": "5.62.7",
     "room-populate": "^1.0.17",
     "styled-components": "^6.0.8",
     "swr": "^2.2.4",
     "three": "^0.158.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "wagmi": "latest"
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.5",
